UtahLiveDataTest/src/objects/FINET_URLs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the production/dev URLs for FINET connections</description>
    <fields>
        <fullName>GranteeDevURL__c</fullName>
        <label>GranteeDevURL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GranteeProdURL__c</fullName>
        <label>GranteeProdURL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantorDevURL__c</fullName>
        <label>GrantorDevURL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantorProdURL__c</fullName>
        <label>GrantorProdURL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FINET URLs</label>
</CustomObject>